--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,6 @@
 [*]
 end_of_line = crlf
-insert_final_newline = false
+insert_final_newline = true
 charset = utf-8
 indent_size = 4
 indent_style = tab
